<resources>
    <string name="app_name">SpendRight</string>
    <string name="add_more"><u>ADD MORE</u></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Accounts</string>
    <string name="title_notifications">Reports</string>
    <string name="THIS_MONTH">My Budgets</string>
    <string name="terms">Terms &amp; Conditions
    Updated at 2022-10-01
    General Terms
    By accessing and placing an order with SpendRight, you confirm that you are in agreement with and bound by the terms of service contained in the Terms &amp; Conditions outlined below. These terms apply to the entire website and any email or other type of communication between you and SpendRight.
    Under no circumstances shall SpendRight team be liable for any direct, indirect, special, incidental or consequential damages, including, but not limited to, loss of data or profit, arising out of the use, or the inability to use, the materials on this site, even if SpendRight team or an authorized representative has been advised of the possibility of such damages. If your use of materials from this site results in the need for servicing, repair or correction of equipment or data, you assume any costs thereof.
    SpendRight will not be responsible for any outcome that may occur during the course of usage of our resources. We reserve the rights to change prices and revise the resources usage policy in any moment.

    License
    SpendRight grants you a revocable, non-exclusive, non-transferable, limited license to download, install and use the app strictly in accordance with the terms of this Agreement.
    These Terms &amp; Conditions are a contract between you and SpendRight (referred to in these Terms &amp; Conditions as "SpendRight", "us", "we" or "our"), the provider of the SpendRight website and the services accessible from the SpendRight website (which are collectively referred to in these Terms &amp; Conditions as the "SpendRight Service").
    You are agreeing to be bound by these Terms &amp; Conditions. If you do not agree to these Terms &amp; Conditions, please do not use the SpendRight Service. In these Terms &amp; Conditions, "you" refers both to you as an individual and to the entity you represent. If you violate any of these Terms &amp; Conditions, we reserve the right to cancel your account or block access to your account without notice.

    For this Terms &amp; Conditions:
    -Cookie: small amount of data generated by a website and saved by your web browser. It is used to identify your browser, provide analytics, remember information about you such as your language preference or login information.
  -Company: when this policy mentions “Company,” “we,” “us,” or “our,” it refers to Spendright Ltd, (2 Okwudili Ezenwankwo Drive, GRA Onitsha, Anambra State) that is responsible for your information under this Terms &amp; Conditions.
  -Country: where SpendRight or the owners/founders of SpendRight are based, in this case is Nigeria
  -Device: any internet connected device such as a phone, tablet, computer or any other device that can be used to visit SpendRight and use the services.
    -Service: refers to the service provided by SpendRight as described in the relative terms (if available) and on this platform.
  -Third-party service: refers to advertisers, contest sponsors, promotional and marketing partners, and others who provide our content or whose products or services we think may interest you.
  -Website: SpendRight."’s" site, which can be accessed via this URL:
  -You: a person or entity that is registered with SpendRight to use the Services.

    Your Suggestions
    Any feedback, comments, ideas, improvements or suggestions (collectively, "Suggestions") provided by you to SpendRight with respect to the app shall remain the sole and exclusive property of SpendRight.
    SpendRight shall be free to use, copy, modify, publish, or redistribute the Suggestions for any purpose and in any way without any credit or any compensation to you.

    Your Consent
    We have updated our Terms &amp; Conditions to provide you with complete transparency into what is being set when you visit our site and how its being used. By using our app, registering an account, or making a purchase, you hereby consent to our Terms &amp; Conditions.

    Modifications to Our app
    SpendRight reserves the right to modify, suspend or discontinue, temporarily or permanently, the app or any service to which it connects, with or without notice and without liability to you

    Updates to Our app
    SpendRight may from time to time provide enhancements or improvements to the features/ functionality of the app, which may include patches, bug fixes, updates, upgrades and other modifications ("Updates").
    Updates may modify or delete certain features and/or functionalities of the app. You agree that SpendRight has no obligation to (i) provide any Updates, or (ii) continue to provide or enable any particular features and/or functionalities of the app to you.
    You further agree that all Updates will be (i) deemed to constitute an integral part of the app, and (ii) subject to the terms and conditions of this Agreement.

    Indemnification
    You agree to indemnify and hold SpendRight and its parents, subsidiaries, affiliates, officers, employees, agents, partners and licensors (if any) harmless from any claim or demand, including reasonable attorneys fees, due to or arising out of your: (a) use of the app; (b) violation of this Agreement or any law or regulation; or © violation of any right of a third party.

    Amendments to this Agreement
    SpendRight reserves the right, at its sole discretion, to modify or replace this Agreement at any time. If a revision is material we will provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.
    By continuing to access or use our app after any revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, you are no longer authorized to use SpendRight.

    Updates to Our Terms
    We may change our Service and policies, and we may need to make changes to these Terms so that they accurately reflect our Service and policies. Unless otherwise required by law, we will notify you (for example, through our Service) before we make changes to these Terms and give you an opportunity to review them before they go into effect. Then, if you continue to use the Service, you will be bound by the updated Terms. If you do not want to agree to these or any updated Terms, you can delete your account.

    Intellectual Property
    The app and its entire contents, features and functionality (including but not limited to all information, software, text, displays, images, video and audio, and the design, selection and arrangement thereof), are owned by SpendRight, its licensors or other providers of such material and are protected by Nigeria and international copyright, trademark, patent, trade secret and other intellectual property or proprietary rights laws. The material may not be copied, modified, reproduced, downloaded or distributed in any way, in whole or in part, without the express prior written permission of SpendRight, unless and except as is expressly provided in these Terms &amp; Conditions. Any unauthorized use of the material is prohibited.

    Notice of Dispute
    In the event of a dispute, you or SpendRight must give the other a Notice of Dispute, which is a written statement that sets forth the name, address, and contact information of the party giving it, the facts giving rise to the dispute, and the relief requested. You must send any Notice of Dispute via email to: contact@spendright.ng. SpendRight will send any Notice of Dispute to you by mail to your address if we have it, or otherwise to your email address. You and SpendRight will attempt to resolve any dispute through informal negotiation within sixty (60) days from the date the Notice of Dispute is sent. After sixty (60) days, you or SpendRight may commence arbitration

    Disclaimer

    SpendRight is not responsible for any content, code or any other imprecision.

    SpendRight does not provide warranties or guarantees.

    In no event shall SpendRight be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. SpendRight reserves the right to make additions, deletions, or modifications to the contents on the Service at any time without prior notice.

    The SpendRight Service and its contents are provided "as is" and "as available" without any warranty or representations of any kind, whether express or implied. SpendRight is a distributor and not a publisher of the content supplied by third parties; as such, SpendRight exercises no editorial control over such content and makes no warranty or representation as to the accuracy, reliability or currency of any information, content, service or merchandise provided through or accessible via the SpendRight Service. Without limiting the foregoing, SpendRight specifically disclaims all warranties and representations in any content transmitted on or in connection with the SpendRight Service or on sites that may appear as links on the SpendRight Service, or in the products provided as a part of, or otherwise in connection with, the SpendRight Service, including without limitation any warranties of merchantability, fitness for a particular purpose or non-infringement of third party rights. No oral advice or written information given by SpendRight or any of its affiliates, employees, officers, directors, agents, or the like will create a warranty. Price and availability information is subject to change without notice. Without limiting the foregoing, SpendRight does not warrant that the SpendRight Service will be uninterrupted, uncorrupted, timely, or error-free.

    Contact Us
    Don not hesitate to contact us if you have any questions.

     -Via Email:  contact@spendright.ng
     -Via this Link:  https://spendright.ng/contact</string>
    <string name="assign_through"><u>ASSIGN THROUGH</u></string>
    <string name="set_budget"><u>SET BUDGET</u></string>
    <string name="my_budgets"><u>MY BUDGETS</u></string>
    <string name="checkInternet">Please Check Your Internet Connection</string>
    <string name="facebook_app_id">1174011723346095</string>
    <string name="fb_login_protocol_scheme">fb1174011723346095</string>
    <string name="this_month">This month</string>
    <string name="view_all_plan"><u>View All Plan</u></string>
    <string name="date_wise_statement"><u>Statement</u></string>
    <string name="details"><u>Details</u></string>
    <string name="payment_complete">Payment Successful</string>
    <string name="my_virtual_card">My Virtual Cards</string>
    <string name="top_up">Top Up</string>
  <string name="delete">Delete</string>
    <string name="withdraw">Withdraw</string>
    <string name="unblock">Unblock</string>
  <string name="block">Block</string>
    <string name="transaction_summery">Transaction Summary</string>
  <string name="card_balance">Card Balance</string>
  <string name="create_virtual_card">Create Virtual Card</string>
  <string name="create_my_virtual_card">Create My Virtual Card</string>
  <string name="mr">Mr</string>
  <string name="mrs">Mrs</string>
  <string name="miss">Miss</string>
  <string name="budget">Budget</string>
  <string name="settings">Setting</string>
  <string name="expense">Tracker</string>
    <string name="done">Done</string>
    <string name="view_receipt">View Receipt</string>
  <string name="repor">Report</string>
</resources>