<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/wallet"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_setBudget"
        android:icon="@drawable/ic_bud"
        android:title="@string/budget"
        />

    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/ic_expense"
        android:title="@string/expense"
        />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/graph"
        android:title="@string/repor"
        />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />

</menu>