<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical"
        style="@style/AppBottomSheetDialogTheme">


        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/create_virtual_card"
            android:textSize="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            />


        <RelativeLayout
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/border_white_one"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >




                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_17sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/mr"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_17sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/mrs"
                    android:layout_marginLeft="@dimen/_35sdp"
                    android:layout_marginRight="@dimen/_35sdp"
                    />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_17sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/miss"
                    />

            </RadioGroup>




        </RelativeLayout>


        <RelativeLayout
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/border_white_one"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_toLeftOf="@+id/imgState">

                <ImageView
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_ngng"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NGN"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppinsregular"
                    />

            </LinearLayout>

            <ImageView
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/imgState"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_btm"
                app:tint="@color/black">

            </ImageView>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/RRCreate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/blue_rounded_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/create_my_virtual_card"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />




        </RelativeLayout>


    </LinearLayout>
</layout>
