<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/RRtoolbaar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/my_virtual_card"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />



            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/ic_added"/>

        </RelativeLayout>


        <ImageView
            android:id="@+id/ivVirtual"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:layout_below="@+id/RRtoolbaar"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_virtual" />

        <LinearLayout
            android:id="@+id/llRecharge"
            android:layout_below="@+id/ivVirtual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:weightSum="3">

            <LinearLayout android:id="@+id/llTopUp"
            android:layout_below="@+id/ivVirtual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_topup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_up"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_11sdp"
                android:layout_margin="@dimen/_3sdp"
                android:fontFamily="@font/poppinsregular"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/llWithdraw"
                android:layout_below="@+id/ivVirtual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_withdraw"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/_3sdp"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/ivVirtual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_del"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_11sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:fontFamily="@font/poppinsregular"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBlockUnblock"
            android:layout_below="@+id/llRecharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/unblock"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_18sdp"
                android:src="@drawable/ic_unblock"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/block"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlSummery"
            android:layout_below="@+id/llBlockUnblock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/transaction_summery"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/rlSummery"
            android:layout_above="@+id/rlBalance"
            android:id="@+id/rvFund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_transaction" />




        <RelativeLayout
            android:id="@+id/rlBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/card_balance"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:layout_alignParentRight="true"
                android:text="813.00"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />

        </RelativeLayout>



    </RelativeLayout>

</layout>
