<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/RRtoolbaar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppinsregular"
                android:text="Success"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>



        </RelativeLayout>


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_below="@+id/RRtoolbaar"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_success" />


        <ImageView
            android:id="@+id/imgRight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_below="@+id/imgLogo"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"

            android:src="@drawable/ic_green_right" />




        <TextView
            android:id="@+id/tvStatus"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white"
            android:text="@string/payment_complete"
            android:fontFamily="@font/poppinsregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/RRViewReceipt"

            />

        <RelativeLayout
            android:id="@+id/RRViewReceipt"
            android:layout_above="@+id/RRComplete"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/view_receipt"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:id="@+id/RRComplete"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</layout>
